--- a/www/js/app/menu/menu.html
+++ b/www/js/app/menu/menu.html
@@ -8,8 +8,8 @@
 
         <ion-content>
             <ion-list>
-                <ion-item>About</ion-item>
-                <ion-item>Films</ion-item>
+                <ion-item ui-sref="app.about" menu-close>About</ion-item>
+                <ion-item href="#/app/films" menu-close>Films</ion-item>
             </ion-list>
         </ion-content>
 
