--- a/www/js/app/films/films-detail.html
+++ b/www/js/app/films/films-detail.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Film details">
 
     <ion-content>
-        <p>Details of film</p>
+        <p>Details of {{film.title}}</p>
     </ion-content>
 
 </ion-view>
