--- a/www/js/app/films/films.html
+++ b/www/js/app/films/films.html
@@ -2,10 +2,7 @@
 
     <ion-content>
         <ion-list>
-            <ion-item ui-sref="app.films-detail">Film 1</ion-item>
-            <ion-item ui-sref="app.films-detail">Film 2</ion-item>
-            <ion-item ui-sref="app.films-detail">Film 3</ion-item>
-            <ion-item ui-sref="app.films-detail">Film 4</ion-item>
+            <ion-item ui-sref="app.films-detail" ng-repeat="film in films">{{film.title}}</ion-item>
         </ion-list>
     </ion-content>
 
