--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,7 @@
         <!-- your app's js -->
         <script src="js/app.js"></script>
         <script src="js/common/models/FilmModel.js"></script>
+        <script src="js/common/services/OMDBFilmsModule.js"></script>
         <script src="js/app/films/FilmsModule.js"></script>
         <script src="js/app/films/FilmsDetails/FilmDetailsController.js"></script>
         <script src="js/app/films/Films/FilmsController.js"></script>
