--- a/www/js/app/films/Films/films.html
+++ b/www/js/app/films/Films/films.html
@@ -2,7 +2,7 @@
 
     <ion-content>
         <ion-list>
-            <ion-item ui-sref="app.films-detail" ng-repeat="film in films">{{film.title}}</ion-item>
+            <ion-item ui-sref="app.films-detail({filmTitle:'{{film.title}}'})" ng-repeat="film in films">{{film.title}}</ion-item>
         </ion-list>
     </ion-content>
 
